fixed the alignment

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -118,107 +118,7 @@ padding: 30px;
 margin: 10px auto;
 box-shadow: 0 0 8px rgba(0, 0, 0, 0.57);
 }
-//from below is the card results---------------------
 
-
-
-.card-result {
-
- text-decoration: none;
-
- display: flex;
- flex-direction: column;
- width: 40vw;
- justify-content: flex-start;
- flex-wrap: wrap;
- max-resolution: 45px;
-}
-
-
-.card-result a{
-  text-decoration: none !important;
-  color:white
-}
-.large {
-  width: 45% !important;
-  min-width: 360px !important;
-}
-
-
-.card-category-result {
-  background-size: cover !important;
-  background-position: center !important;
-  height: 179px;
-  width: 18%;
-  min-width: 180px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 16px;
-  font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
-  transition: 0.3s ease;
-  text-decoration: none;
-  margin: 10px;
-  margin-left: 97px;
-}
-.card-category-result:hover{
-  transform: scale(1.1);
-}
-
-.container-search {
-margin: 5%;
-margin-right: 10%;
-margin-top: 5%;
-margin-right: -120px;
-margin-left: 10%;
-
-}
-.container-search-result {
-margin: 5%;
-margin-right: 10%;
-margin-top: 5%;
-margin-right: -120px;
-margin-left: -5%;
-
-}
-.search-state {
-// margin-left: -115px;
-box-shadow :0 0 15px rgba(0, 0, 0, 0.1);
-border-color :lightgrey;
-padding :23px;
-border-radius:10px;
-margin-left: 32vw;
-width: 77%;
-margin-top: 25px;
-}
-.search-state :hover{
-  transform: scale(1.1);
-}
-.back-to {
-  margin-left: 80px !important;
-  color: #393e46;
-  opacity: 0.8 !important;
-}
-
-.back-to:hover{
-  color: $brand-secondary !important;
-}
-
-
-
-.search-state-article strong{
-  color:$brand-secondary;
-}
-.search-state-question strong {
-  color:$brand-secondary;
-}
-.search-state strong {
-  color:$brand-secondary;
-}
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .card-home {
@@ -254,23 +154,3 @@ margin-top: 25px;
   }
 }
 
-#flex-questions {
-  display: flex;
-  height: 75px;
-  align-items: flex-start;
-}
-
-.search-state-question {
-  min-width: 75%;
-  margin-top: 4px;
-}
-
-.question-btn {
-  max-height: 43%;
-  margin: 0px !important;
-}
-
-.keyword-text {
-      margin-top: 13px;
-    margin-bottom: 12.5px;
-}
